# kinova-brace

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  PROMPT.md  README.md  demo.py  pyproject.toml
KINOVA_CODEBASE/: README.md  demo.py  pyproject.toml
KINOVA_CODEBASE/controllers/: README.md  __init__.py  demo.py  safety.py
KINOVA_CODEBASE/controllers/cartesian_velocity/: __init__.py
KINOVA_CODEBASE/controllers/input/: __init__.py  keyboard.py  waypoint_follower.py
KINOVA_CODEBASE/controllers/modes/: __init__.py  manager.py  types.py
KINOVA_CODEBASE/copilot_demo/: README.md
KINOVA_CODEBASE/copilot_demo/copilot_demo/: demo_isaacsim.py  extractor.py  ui_omni.py
KINOVA_CODEBASE/copilot_demo/tests/: conftest.py  test_extractor.py  test_quantize.py
KINOVA_CODEBASE/data_collection/: README.md
KINOVA_CODEBASE/data_collection/core/: logger.py  objects.py
KINOVA_CODEBASE/data_collection/envs/: __init__.py
KINOVA_CODEBASE/data_collection/samplers/: __init__.py  grasp_estimation.py
KINOVA_CODEBASE/environments/: README.md
KINOVA_CODEBASE/environments/reach_to_grasp_VLA/: demo_VLA.py  utils.py
KINOVA_CODEBASE/environments/utils/: object_loader.py
KINOVA_CODEBASE/kinova/: README.md  __init__.py  motion.py
KINOVA_CODEBASE/motion_generation/: README.md  __init__.py  curobo_world.py
KINOVA_CODEBASE/motion_generation/grasp_estimation/: __init__.py  replicator.py
KINOVA_CODEBASE/motion_generation/planners/: __init__.py  factory.py
KINOVA_CODEBASE/scripts/: cli.py
KINOVA_CODEBASE/utilities/: transforms.py
Paper/: MAIN.tex  (+3 more)
assist/: README.md  (+11 more)
(+243 files in other folders)
